# kvik-rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile
benchmarks/: common.rs  device_io.rs  host_io.rs  parallel_io.rs
examples/: basic_gds_io.rs  basic_host_io.rs  parallel_io.rs
src/: align.rs  batch.rs  bounce_buffer.rs  buffer.rs  compat_mode.rs  config.rs  error.rs  file_handle.rs  lib.rs  posix_io.rs  thread_pool.rs
tests/: async_io.rs  basic_io.rs  bounce_buffer.rs  compat_mode.rs  config_env.rs  direct_io.rs  gds_memory_transfer.rs  gpu_vram_stress.rs  parallel_io.rs  test_utils.rs
